# short-stream

./: .dockerignore  .gitignore  .nxignore  .release-please-config.json  .release-please-manifest.json  Makefile  README.md  docker-compose.yml  go.work  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/commands/: commit.md
.github/actions/setup-monorepo/: action.yml
.github/workflows/: README.md  frontend-ci.yml  nx-ci.yml  nx-deploy-dev.yml  nx-deploy.yml  release-dev.yml
apps/auth_service/: .env.example  .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile  README.md  go.mod  go.sum  project.json  sonar-project.properties  tiltfile
apps/auth_service/cmd/: main.go
apps/auth_service/development/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml
apps/auth_service/internal/bootstrap/: bootstrap.go
apps/auth_service/internal/config/: app.go  config.go  config_test.go  oidc.go  redis.go
apps/auth_service/internal/handlers/: auth.go  auth_test.go
apps/auth_service/internal/middleware/: cors.go  cors_test.go  logger.go  logger_test.go  recovery.go  recovery_test.go
apps/auth_service/internal/oidc/: client.go  client_test.go
apps/auth_service/internal/storage/: redis.go  redis_integration_test.go  storage.go
apps/auth_service/pkg/logger/: logger.go  logger_test.go
apps/frontend/: CHANGELOG.md  Dockerfile  README_TESTING.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  middleware.ts  package.json  playwright.config.ts  project.json
apps/frontend/__tests__/fixtures/: mockVideos.ts
apps/frontend/__tests__/utils/: mockVideoElement.ts  testUtils.tsx
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/login/: page.tsx
apps/frontend/app/profile/: page.tsx
apps/frontend/app/settings/: page.tsx
apps/frontend/components/: EmptyState.tsx  Header.tsx  Logo.tsx  ScrollButtons.tsx  Sidebar.tsx  VideoActions.tsx  VideoCard.tsx  VideoFeed.tsx
apps/frontend/components/__tests__/: VideoCard.test.tsx  VideoFeed.test.tsx
apps/frontend/contexts/: AudioContext.tsx  AuthContext.tsx
apps/frontend/contexts/__tests__/: AudioContext.test.tsx  AuthContext.test.tsx
apps/frontend/e2e/: video-playback.spec.ts
apps/frontend/e2e/fixtures/: test.ts  videos.ts
apps/frontend/hooks/: useVideos.ts
apps/frontend/hooks/__tests__/: useVideos.test.ts
apps/frontend/lib/: config.ts  pexels.ts  types.ts
apps/frontend/lib/__tests__/: config.test.ts
apps/frontend/lib/api/: auth.ts
apps/gateway/: CHANGELOG.md  Dockerfile  package.json  project.json
apps/gateway/src/: app.module.ts  main.ts
apps/gateway/src/auth-proxy/: auth-proxy.controller.ts  auth-proxy.module.ts  auth-proxy.service.ts
apps/moderation_service/: CHANGELOG.md  Dockerfile  project.json  pyproject.toml
apps/notification_service/: CHANGELOG.md  Dockerfile  go.mod  project.json
apps/video_auto_legend/: CHANGELOG.md  Dockerfile  project.json  pyproject.toml
apps/video_conversor/: CHANGELOG.md  Dockerfile  go.mod  project.json
apps/video_feed_provider/: CHANGELOG.md  Dockerfile  package.json  project.json
apps/video_metadata_service/: CHANGELOG.md  Dockerfile  go.mod  project.json
apps/video_schene_analyzer/: CHANGELOG.md  Dockerfile  project.json  pyproject.toml
apps/video_uploader/: CHANGELOG.md  Dockerfile  go.mod  project.json
infra/k8s/: README.md
infra/k8s/base/: kustomization.yaml
infra/k8s/base/configmaps/: app-config.yaml
(+41 files in other folders)
