[project]
name = "video-auto-legend"
version = "0.1.1"
description = "Automatic video subtitle generation service"
requires-python = ">=3.14"
dependencies = [
    "short-stream-commons",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
short-stream-commons = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
